// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@lad-tech/mobydick-core/CodeField render correctly with value blur 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#F2F4F7",
        "borderRadius": 8,
        "flexDirection": "row",
        "justifyContent": "center",
        "minHeight": 48,
        "minWidth": 68,
      },
      undefined,
    ]
  }
>
  <TextInput
    accessibilityLabel="codeField"
    allowFontScaling={false}
    importantForAutofill="no"
    keyboardType="numeric"
    maxLength={1}
    onBlur={[Function]}
    onChangeText={[MockFunction]}
    onFocus={[Function]}
    onKeyPress={[Function]}
    placeholderTextColor="#9BA1B0"
    selectionColor="#2B78EE"
    style={
      [
        {
          "flex": 1,
          "padding": 0,
          "textAlign": "center",
        },
        {
          "color": "#20242D",
          "fontFamily": "Inter-Regular",
          "fontSize": 20,
          "lineHeight": 24,
          "minHeight": 24,
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`@lad-tech/mobydick-core/CodeField render correctly with value focus 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#F2F4F7",
        "borderRadius": 8,
        "flexDirection": "row",
        "justifyContent": "center",
        "minHeight": 48,
        "minWidth": 68,
      },
      undefined,
    ]
  }
>
  <TextInput
    accessibilityLabel="codeField"
    allowFontScaling={false}
    importantForAutofill="no"
    keyboardType="numeric"
    maxLength={1}
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyPress={[Function]}
    placeholderTextColor="#9BA1B0"
    selectionColor="#2B78EE"
    style={
      [
        {
          "flex": 1,
          "padding": 0,
          "textAlign": "center",
        },
        {
          "color": "#20242D",
          "fontFamily": "Inter-Regular",
          "fontSize": 20,
          "lineHeight": 24,
          "minHeight": 24,
        },
        undefined,
      ]
    }
  />
</View>
`;
